# old-coat-archive

./: Cargo.toml  README.md  dev.sh  makefile
concept/communication/: context.rs
concept/component_trait/: no_trait.rs  props_as_component.rs  with_0sized.rs
concept/core/: component.rs  props_builder.rs  str.rs
concept/macros/: view_dsl.rs  xml_declaration.html
concept/props_lifetimes/: on_component_impl.rs  on_component_trait.rs
concept/styling/: as_core_concept.rs  using_context.rs
concept/widgets/: builder.rs  button.rs  counter.rs  predicate.rs  switcher.rs
examples/: dev.rs  text.rs  widgets.rs
src/: backend.rs  bounds.rs  builder.rs  color.rs  component.rs  constraints.rs  font.rs  ids.rs  input.rs  layouts.rs  lib.rs  main.rs  mutable.rs  name.rs  primitives.rs  render.rs  text.rs  types.rs  ui.rs  widget.rs  widgets.rs
src/backend/: webrender.rs  winit.rs
src/backend/webrender/: font_manager.rs  notifier.rs  primitives.rs
src/backend/winit/: event_handler.rs  eventloop.rs  window.rs
src/input/: event.rs  key_code.rs
src/layout/: linear.rs
src/layouts/: constrained.rs  linear.rs  offset.rs  padding.rs  stack.rs
src/primitives/: constrained.rs  webrender.rs
src/render/: eventloop.rs  notifier.rs  webrender.rs
src/text/: buffer.rs  layout.rs
src/ui/: cid.rs  data.rs  derive.rs  ids.rs  input.rs  layout.rs  render.rs  update.rs  view.rs  widget_data.rs  widget_id.rs
src/widget/: rectangle.rs
src/widgets/: glyphs.rs  key_area.rs  line.rs  rectangle.rs  text.rs  text_input_area.rs  textedit.rs  touch_area.rs
(+1 files in other folders)
