[package]
name = "coat"
description = "Nothing yet"
version = "0.0.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
fnv = "1.0.6"
smallvec = "0.6.7"
log = "0.4.6"
winit = "0.18.0"
gleam = "0.6.8"
glutin = "0.19.0"
euclid = "0.19.4"

[dependencies.webrender]
git = "https://github.com/servo/webrender.git"
rev = "fab59ceef070c11aba2a86c4ddf6ddc3c4e8f97d"
