[package]
name = "coat"
description = "Nothing yet"
version = "0.0.0"
authors = ["Leopold Luley <git@leopoldluley.de>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[dependencies]
fnv = "1.0.6"
smallvec = "0.6.7"
log = "0.4.6"
winit = "0.18.1"
gleam = "0.6.8"
glutin = "0.19.0"
rusttype = "0.7.3"
app_units = "0.7.1"
euclid = "0.19.5"
webrender = "0.58.0"

[dev-dependencies]
env_logger = "0.6.0"
